# cw-amaci

./: .gitignore  Cargo.toml  README.md
contracts/amaci/: Cargo.toml
contracts/amaci/scripts/: index.ts
contracts/amaci/src/: circuit_params.rs  contract.rs  error.rs  helpers.rs  lib.rs  msg.rs  register_msg.rs  state.rs
contracts/amaci/src/multitest/: mod.rs  tests.rs
contracts/amaci/src/test/amaci_test/: logs.json
contracts/maci/: Cargo.toml
contracts/maci/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/oracle-maci/: Cargo.toml
contracts/oracle-maci/schema/: cw-oracle-maci.json
contracts/oracle-maci/schema/raw/: execute.json  instantiate.json
contracts/oracle-maci/src/: circuit_params.rs  contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/oracle-maci/src/multitest/: certificate_generator.rs  mod.rs  tests.rs
contracts/registry/: Cargo.toml
contracts/registry/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/registry/src/migrates/: migrate_v0_1_4.rs  mod.rs
contracts/registry/src/multitest/: mod.rs  tests.rs
contracts/registry/src/test/amaci_test/: logs.json
contracts/saas/: CREATE_MACI_ROUND.md  Cargo.toml  README.md
contracts/saas/schema/: cw-saas.json
contracts/saas/schema/raw/: execute.json  instantiate.json  query.json  response_to_config.json  response_to_operators.json
contracts/saas/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/saas/src/multitest/: mod.rs  tests.rs
contracts/saas/ts/: Saas.client.ts  Saas.types.ts
