[package]
name = "cw-amaci-registry"
version = "0.1.0"
authors = ["feng"]
edition = "2021"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.14.0
"""

[dependencies]
cosmwasm-schema = "1.1.0"
cosmwasm-std = "1.5.0"
cw-storage-plus = "1.1.0"
cw2 = "1.1.0"
schemars = "0.8.10"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
cw-utils = "1.0.1"
cw4 = "1.1.0"
cw-controllers = "1.1.0"
hex = "0.4"
# pairing_ce = { git = "https://github.com/matter-labs/pairing.git" }
num-bigint = "0.4.3"
num-traits = "0.2"
cw-amaci = { path = "../amaci", features = ["library"] }


[dev-dependencies]
anyhow = "1"
assert_matches = "1"
cw-multi-test = "0.16.2"
derivative = "2"
serde_json = "1.0"
num-bigint = "0.4.3"
