[package]
name = "cw-saas"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = "1.1.3"
cosmwasm-std = { version = "1.1.3", features = ["staking"] }
cw-storage-plus = "1.0.1"
cw2 = "1.0.1"
cw-utils = "1.0.1"
thiserror = { version = "1.0.31" }
schemars = "0.8.10"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
serde_json = "1.0"
bech32 = "0.9.1"
cw-amaci = { path = "../amaci", features = ["library"] }

[dev-dependencies]
cw-multi-test = "0.20.0"
anyhow = "1.0"
cw-amaci-registry = { path = "../registry", features = ["mt"] }
cw-amaci = { path = "../amaci", features = ["mt"] }

[features]
default = []
mt = [] 